src/test/ui/question-mark-type-infer.stderr
error[E0284]: type annotations needed
  --> $DIR/question-mark-type-infer.rs:12:5
   |
LL |     l.iter().map(f).collect()?
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<_ as Try>::Residual == _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
